# code-we-live-by

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISPLAY_CONVENTIONS.md  README.md  TASKS.md  THE_CODE_WE_LIVE_BY_SPEC.md  US_CODE_EXPLORER_SPEC.md  app.py  dev.sh  docker-compose.yml  explore_us_code_structure.ipynb  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08cdb229431e_initial_schema.py  19521111cd88_add_codeowners_tables.py  31e77be6b0e1_initial_schema.py  883637321672_backfill_t17_ch10_section_group.py  a1b2c3d4e5f6_add_law_bill_action_and_law_sponsor.py  a1b2c3d4e5f6_widen_us_code_section_heading_to_text.py  a2c4e6f8b0d2_add_validation_tables.py  a2f3b8c1d4e5_add_olrc_release_point.py  a2f3c4d5e6f7_add_chapter_group.py  a8b9c0d1e2f3_section_group_uuid_primary_key.py  b151e1b05c53_initial_schema.py  b3c4d5e6f7a8_add_code_revision_and_section_snapshot.py  c4d5e6f7a8b9_law_change_natural_keys_snapshot_group.py  ce275a30c5ec_add_signing_statement_to_public_law.py  cfeb4ccf0b6c_add_normalized_notes_jsonb_to_us_code_.py  d5b05c4c4e7e_add_district_to_law_sponsor.py  d5e6f7a8b9c0_drop_snapshot_unique_allow_duplicate_sections.py  e1749da6ffc4_strip_em_dash_space_in_amendments_notes.py  e6f7a8b9c0d1_add_note_change_type.py  f7a8b9c0d1e2_add_snapshot_revision_indexes.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: cache_middleware.py  (+4 more)
backend/pipeline/: DISPLAY_CONVENTIONS.md  PARSER_TESTING.md  __init__.py  backfill_last_modified.py  backfill_renormalize_notes.py  cache.py  cli.py  timeline.py
backend/scripts/: migrate.sh  seed.sh  seed_bootstrap.sh  seed_finalize.sh  seed_init.sh
backend/tests/: __init__.py  test_last_modified_date.py  test_law_history_helpers.py  test_president_lookup.py  test_section_notes_schema.py
(+311 files in other folders)
